src/objects/nJob_Posting__c.object
<CustomObject>
    <fields>
        <fullName>EmployementWS__c</fullName>
        <label>EmployementWS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JP_Number__c</fullName>
        <label>JP_Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>position</label>
        <referenceTo>nposition__c</referenceTo>
        <relationshipName>Job_Posting</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>nJob Posting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>jp-{000}</displayFormat>
        <label>nJob Posting id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nJob Posting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>